JinL - fix font-size and line wrap issue on contact page

--- a/source/mobile-base/client/modules/core/components/home.less
+++ b/source/mobile-base/client/modules/core/components/home.less
@@ -6,3 +6,8 @@
     text-align: center;
   }
 }
+
+#contactInfo p {
+  font-size:14px !important;
+  white-space:normal !important;
+}
